--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-awesome-slider": "^1.0.1",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
